#FIX: Adaptacoes para executar no ambiente SES, mudancas no banco, na utilizacao de api externa para login
