# server/api/controllers/perfil.js
@@ -4,7 +4,7 @@ module.exports = {
   getPerfis: (req, res)=>{
     models.Perfil.findAll({
       include:[{ model: models.Aplicacao,
-          as: 'Aplicacao', where:{ codigo: req.swagger.params.aplicacao.value }}],
+          as: 'Aplicacao', where:{ sigla: req.swagger.params.aplicacao.value }}],
       where:{
         ativo:true
       }
