# server/api/swagger/swagger.yaml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  version: "0.1.2"
+  version: "0.0.3"
   title: titulo
   description: descrição
 
@@ -138,7 +138,7 @@ paths:
     x-swagger-router-controller: user
     get:
       description: Retorna o perfil do usuario logado
-      summary: Lista de Usuários do SIGIN
+      summary: Lista de Usuários do MGI
       operationId: getPerfil
       tags:
         - Infraestrutura
@@ -156,8 +156,8 @@ paths:
   /api/user:
     x-swagger-router-controller: user
     get:
-      description: Retorna a lista de usuários que utilizam o  - Módulo de Gestão de Indicadores
-      summary: Lista de Usuários do SIGIN
+      description: Retorna a lista de usuários que utilizam o MGI - Módulo de Gestão de Indicadores
+      summary: Lista de Usuários do MGI
       operationId: getUsers
       parameters:
         - name: situacao
@@ -172,7 +172,7 @@ paths:
         "200":
           description: Sucesso
           schema:
-            $ref: "#/definitions/GetUserSiginListResponse"
+            $ref: "#/definitions/GetUserMgiListResponse"
         default:
           description: Erro
           schema:
@@ -200,7 +200,7 @@ paths:
           description: Erro
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /api/perfil:
+  /api/perfis:
     x-swagger-router-controller: perfil
     get:
       description: Retorna a lista de perfis
@@ -208,7 +208,7 @@ paths:
       operationId: getPerfis
       parameters:
         - name: aplicacao
-          type: number
+          type: string
           in: query
           required: true
       tags:
@@ -561,23 +561,6 @@ paths:
           description: Erro
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /api/tipo-banco-dados:
-    x-swagger-router-controller: tipo-banco-dados
-    get:
-      description: Retorna os bancos de dados possiveis para a consulta aos indicadores
-      summary: Lista de banco de dados possíveis para consulta
-      operationId: getTipoBancoDados
-      tags:
-        - Cadastros Auxiliares
-      responses:
-        "200":
-          description: Sucesso
-          schema:
-            $ref: "#/definitions/GetTipoBancoDadosResponse"
-        default:
-          description: Erro
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /api/banco-dados:
     x-swagger-router-controller: banco-dados
     get:
@@ -595,99 +578,6 @@ paths:
           description: Erro
           schema:
             $ref: "#/definitions/ErrorResponse"
-    post:
-      description: Cria uma nova informação de banco de dados
-      summary: Cria uma nova informação de banco de dados
-      operationId: createBancoDados
-      tags:
-        - Cadastros Auxiliares
-      parameters:
-        - name: banco-dados
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/BancoDados'
-      responses:
-        "200":
-          description: Sucesso
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-          description: Erro
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /api/banco-dados/{codigo}:
-    x-swagger-router-controller: banco-dados
-    get:
-      description: Retorna uma unidade de informação de banco de dados
-      summary: Recupera um registro de banco de dados
-      operationId: getBancoDadosItem
-      tags:
-        - Cadastros Auxiliares
-      parameters:
-        - name: codigo
-          type: number
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Sucesso
-          schema:
-            type: object
-        default:
-          description: Erro
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    put:
-      description: Edita uma informçãoa de banco de dados
-      summary: Edita um registro de informação de banco de dados
-      operationId: editaBancoDados
-      tags:
-        - Cadastros Auxiliares
-      security:
-        - Bearer: []
-      parameters:
-        - name: codigo
-          type: number
-          in: path
-          required: true
-        - name: banco-dados
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/BancoDados'
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    delete:
-      description: Apaga um registro de banco de dados
-      summary: Apaga um registro de banco de dados
-      operationId: apagaBancoDados
-      tags:
-        - Cadastros Auxiliares
-      security:
-        - Bearer: []
-      parameters:
-        - name: codigo
-          type: number
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-
   /api/aplicacao:
     x-swagger-router-controller: aplicacao
     get:
@@ -1180,9 +1070,9 @@ paths:
           schema:
             $ref: "#/definitions/GetIndicadorConsulta"
         default:
-          description: Erro
+          description: Erro Tratado
           schema:
-            $ref: "#/definitions/ErrorResponse"
+            $ref: "#/definitions/ErrorResponseTratado"
     post:
       description: Cria um novo indicador
       summary: Cria um novo indicador
@@ -1201,9 +1091,9 @@ paths:
           schema:
             $ref: "#/definitions/SuccessResponse"
         default:
-          description: Erro
+          description: Erro Tratado
           schema:
-            $ref: "#/definitions/ErrorResponse"
+            $ref: "#/definitions/ErrorResponseTratado"
   /api/indicador-portag:
     x-swagger-router-controller: tag
     get:
@@ -1867,7 +1757,7 @@ paths:
           description: Erro
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /api/unidade:
+  /api/unidades:
     x-swagger-router-controller: unidade
     get:
       description: Lista unidades
@@ -2079,8 +1969,8 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
 definitions:
-  GetUserSiginListResponse:
-    description: Lista de Usuários do SIGIN
+  GetUserMgiListResponse:
+    description: Lista de Usuários do MGI
     type: object
 
   Programa:
@@ -2422,21 +2312,6 @@ definitions:
               type: string
             mime:
               type: string
-  GetTipoBancoDadosResponse:
-    required:
-      - tipo_banco_dados
-    properties:
-      tipo_banco_dados:
-        type: array
-        items:
-          type: object
-          properties:
-            codigo:
-              type: number
-            descricao:
-              type: string
-            mime:
-              type: string
   GetBancoDadosResponse:
     required:
       - banco_dados
@@ -2450,14 +2325,8 @@ definitions:
               type: number
             descricao:
               type: string
-            host:
-              type: [string, 'null']
-            usuario:
-              type: [string, 'null']
-            schema:
-              type: [string, 'null']
-
-
+            mime:
+              type: string
   GetUserPerfilResponse:
     required:
       - perfil
@@ -2608,9 +2477,6 @@ definitions:
       descricao:
         type: string
         description: Descrição da fonte de dados
-  BancoDados:
-    description: Objeto banco de dados
-    type: object
   UnidadeMedida:
     description: Objeto unidade de medida
     type: object
